--- a/Interior Design/css/style.css
+++ b/Interior Design/css/style.css
@@ -2059,14 +2059,7 @@ h6 {
 }
 
 .controls-price__link {
-  color: #B9B9B9;
-  -webkit-transition: 1s;
-  -o-transition: 1s;
-  transition: 1s;
   margin-right: 5%;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
-  border-bottom: 3px solid #B9B9B9;
   min-width: 145px;
   cursor: pointer;
   font-size: calc(16px + 4 * ((100vw - 320px) / 1600));
@@ -2076,7 +2069,18 @@ h6 {
   margin-right: 0px;
 }
 
-.controls-price__link_active {
+.controls-price__link span {
+  display: inline-block;
+  color: #B9B9B9;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 3px solid #B9B9B9;
+}
+
+.controls-price__link_active span {
   color: #373737;
   border-bottom: 3px solid #D9BD89;
   -webkit-transition: 1s;
