--- a/Interior Design/css/assets.css
+++ b/Interior Design/css/assets.css
@@ -1,7 +1,30 @@
+.assets__main {
+  background-color: #FCFCFC;
+}
+
+.assets__section {
+  background: url("../img/Portfolio/bg-main.png") top right/100% no-repeat, url("../img/Portfolio/bg-main.png") bottom 16% center/70% no-repeat;
+}
+
+.assets__blocks {
+  margin-bottom: 20px;
+}
+
+.assets__blocks:before {
+  display: none;
+}
+
+.assets__block {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
 .assets__item-25 {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 25%;
-          flex: 0 1 25%;
+      -ms-flex: 0 1 23%;
+          flex: 0 1 23%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -9,10 +32,24 @@
   padding: 25px;
 }
 
+.assets__item-33 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 30%;
+          flex: 0 1 30%;
+}
+
+.assets__item-50 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 44%;
+          flex: 0 1 44%;
+  padding: 0px;
+  overflow: hidden;
+}
+
 .assets__title {
-  padding-bottom: 0;
+  padding-bottom: 5px;
   line-height: 85.3%;
-  font-size: calc(24px + 12 * ((100vw - 320px) / 1600));
+  font-size: calc(24px + 10 * ((100vw - 320px) / 1600));
 }
 
 .assets__date {
@@ -39,28 +76,29 @@
   padding-right: 20px;
 }
 
-.assets__item-50 {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 50%;
-          flex: 0 1 50%;
-  padding: 0px;
-  overflow: hidden;
+.bottom-block__item.assets__item-33 {
+  padding: 25px;
+}
+
+.assets__presents {
+  color: #373737;
 }
 
 .assets-item__img {
   max-height: 100%;
   height: 100%;
-  max-width: 40%;
-}
-
-.assets-item__img img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  min-height: 320px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  max-width: 320px;
+  display: block;
 }
 
 .assets__description {
   line-height: 133%;
   margin-bottom: 0;
+  font-size: calc(14px + 2 * ((100vw - 320px) / 1600));
 }
 
 .assets__description span {
@@ -72,5 +110,64 @@
 }
 
 .assets__text {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
   padding: 20px;
 }
+
+.btn-group {
+  width: 100%;
+  display: block;
+  text-align: center;
+}
+
+.assets__btn {
+  margin-top: 30px;
+}
+
+@media (max-width: 991.98px) {
+  .assets__item-25 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 44%;
+            flex: 0 1 44%;
+  }
+
+  .assets__item-33 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 44%;
+            flex: 0 1 44%;
+  }
+
+  .assets__item-50 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
+}
+
+@media (max-width: 576.98px) {
+  .assets__item-25 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
+
+  .assets__item-33 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
+
+  .assets-item__img {
+    display: none;
+  }
+
+  .assets__text {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
+}
+
+.webp .assets__section { background: url(../img/Portfolio/bg-main.webp) top right/100% no-repeat, url(../img/Portfolio/bg-main.webp) bottom 16% center/70% no-repeat; }
