--- a/Interior Design/css/partners.css
+++ b/Interior Design/css/partners.css
@@ -81,7 +81,8 @@
 }
 
 .partners-steps__content {
-  margin: 0px 15px;
+  margin: 15px 15px;
+  min-height: 285px;
   min-width: 700px;
   background: #FFFFFF;
   -webkit-box-shadow: 0px 4px 8px rgba(139, 139, 139, 0.31);
@@ -111,6 +112,7 @@
   text-align: right;
   display: block;
   padding-bottom: 40px;
+  padding-right: 10px;
 }
 
 .right-partners-img__twit {
@@ -131,9 +133,13 @@
   font-size: calc(16px + 2 * ((100vw - 320px) / 1600));
   display: block;
   padding-bottom: 20px;
+  position: relative;
+  z-index: 7;
 }
 
 .right-partners__text {
+  position: relative;
+  z-index: 7;
   letter-spacing: 0.025em;
   font-size: calc(14px + 2 * ((100vw - 320px) / 1600));
   line-height: 19px;
@@ -145,9 +151,42 @@
   font-weight: 500;
 }
 
+@media (max-width: 1500px) {
+  .partners__body {
+    margin: 0;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
 @media (max-width: 767.98px) {
+  .partners__row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
   .partners__text p {
     line-height: 16px;
+  }
+
+  .partners-steps__content {
+    min-width: 100%;
+  }
+
+  .right-partners-content__img img {
+    max-height: 240px;
+  }
+}
+
+@media (max-width: 576.98px) {
+  .partners-steps__content {
+    min-height: 300px;
+  }
+
+  .right-partners-content__img img {
+    display: none;
   }
 }
 
