--- a/Interior Design/css/quiz.css
+++ b/Interior Design/css/quiz.css
@@ -123,6 +123,27 @@ button {
   padding-bottom: 50px;
 }
 
+.img-block {
+  position: relative;
+}
+
+.img-block:hover .img-block_hover {
+  opacity: 1;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+.img-block_hover {
+  left: 0;
+  top: 0;
+  position: absolute;
+  opacity: 0;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
 @font-face {
   font-family: 'Gilroy';
   src: url("../fonts/Gilroy-Light.eot");
